apps/architecture-portal/versioned_docs/version-1.0.38.0/core/modules/web-runtime-platform.mdx
---
title: Web Runtime Platform
area: core
status: implemented
owners: [core, web, audio]
module: web-runtime-platform
source_paths:
  - packages/web-runtime-platform
  - tests/platform/web
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity kind="modules" id="web-runtime-platform" />

<DiagramFrame title="Web Runtime Platform Module" diagramId="web-runtime-platform" />

## 1. 目的与非职责
为浏览器 Host 提供共享 Runtime Session、输入 adapter、Control bridge、manifest gate 与 Web Audio 接线；不拥有 Creator UI、诊断 UI、Project Truth 或产品专属身份。
## 2. 当前实现状态
Creator Web 与诊断 Web Runtime Host 共用 Platform `2.0.0` 和同一 Wasm Runtime。Platform 除 Sample surface 外，还桥接 revision-bound `sample.quota`、Sequence begin/event/flush/stop/next-Bar switch/status/settings/recovery；pointer、keyboard、MIDI admission 统一使用 Audio Runtime frame clock 与单调 `input_sequence`，JavaScript 不计算 musical time。
## 3. 所有权与依赖
只依赖 Application Facade `2.1.0` 与 Audio Runtime `2.0.0`。Product CMake 注入 Product Build、Platform 版本、完整资源上限及精确 Host allowlist。
## 4. 架构与数据流
Creator/Diagnostic Host → Runtime Session → Application Facade；Project/Sample/Sequence actions 共享有界 Host lane，Pointer、Keyboard、MIDI 汇入同一 frame-stamped admission，AudioWorklet 消费不可变 Runtime Snapshot 并发布 Voice/Bar state。
## 5. API 与 Contract 边界
Platform 校验 canonical distribution manifest，但该同构建协议不是公开跨版本 Contract。Project Bundle 与 WAV sidecar 只通过 Facade 的 bounded streaming API 进入 Core，Browser 不解析 Project/WAV。
## 6. 状态、错误与并发
Manifest mismatch、生命周期失效和 terminal failure 均 fail closed；Main、Control、Worker 与 AudioWorklet 的职责和消息上限固定。Control 侧将 generation quota rejection 与 publication residency rejection 分开：前者保留 Bank/Project 类型和安全筛选后的账本 payload，后者继续使用 transient Web Runtime resource failure，且任一拒绝都保留当前 live generation。启动时先以 release ordering 发布 ControlBridge，再发布 audio adapter；pre-JS 的 audio readiness 因而同时构成 ControlBridge publication barrier。`recovery_probe_ready` 仅在 Runtime 为 `recovering`、当前 epoch 的 probe window 已 armed 且没有已保留 Probe 时为真；Probe 被保留或 window 关闭后立即回到 false，Host 不得从 timer、Context 状态或页面可见性推断 readiness。

Runtime Session 启动只运行一次真实 Control Worker/OPFS capability probe，默认等待预算为 15 秒。明确缺少 Worker/Blob、Worker 返回 negative 或 Worker error 继续 fail closed 为 `UNSUPPORTED_WEB_RUNTIME`；纯调度预算耗尽精确进入 `HOST_TIMEOUT`，不能伪造 `opfs`、`opfsSyncAccessHandle` 或 `opfsWritableReplace` 缺失。message、error 与 timeout 三条 settlement 路径都由同一 `finally` terminate Worker 并 revoke Blob URL。显式暂停期间 Project 操作保持禁用，Host suspend 响应与浏览器 Context suspend 严格串行。
## 7. 产品使用方
`creator-web 2.1.0` 与 `web-runtime-host 2.1.0`。Sequence UI 只展示 Facade 返回的 authority state；pending switch 在 Bar acknowledgement 前保持旧 Pattern，recovery artifact、长素材解码缓冲与 CaptureBuffer 都不冒充 Project Truth。
## 8. 测试与证据
C++ manifest/control/realtime tests、Node Runtime Session tests、Chromium/WebKit browser proof 与分发验证覆盖共享边界；Node 精确断言 Host suspend 未完成时 `AudioContext` 仍为 running，Creator packaged Proof 覆盖真实 Sample Cook split 后的 suspend→activate→Retry Prepare，并继续覆盖 recovery readiness 的 `false -> true -> false -> running` 序列。
## 9. 限制与下一门禁
自动化不替代物理 MIDI、Safari/iPad Touch、声学延迟或主观听感验收。
## 10. 版本身份
版本和依赖由 `module.json` 与 Product Assembly Lock 派生。
